# clipsecure

./: .gitignore  CMakeLists.txt  LICENSE  README.en.md  README.md
demo/: demo.cpp
include/: ClipSecure.h  colorPrint.h
include-lib/: detours.lib
src/: ClipSecure.cpp  crypto.cpp  crypto.h  hook.cpp  hook.h  state.cpp  state.h
